# CAPMXT

./: .gitignore  STMUSBATMXT640.ioc  data3.txt  readme.txt
.cursor/rules/: git-commit-chinese.mdc
.stfolder/: syncthing-folder-c1782c.txt
Core/Inc/: dma.h  gpio.h  main.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
Core/Src/: dma.c  gpio.c  gpio.c.restored  i2c.c  main.c  spi.c  stm32f1xx_it.c  tim.c
MDK-ARM/: STMUSBATMXT640.uvguix.Administrator  STMUSBATMXT640.uvguix.yuanchu  STMUSBATMXT640.uvoptx  STMUSBATMXT640.uvprojx  startup_stm32f103xb.lst
MDK-ARM/STMUSBATMXT640/: STMUSBATMXT640.axf  STMUSBATMXT640.build_log.htm  STMUSBATMXT640.hex  STMUSBATMXT640.htm  STMUSBATMXT640.lnp  STMUSBATMXT640.map  STMUSBATMXT640.sct  STMUSBATMXT640_CRC16_CCITT_FALSE.hex  STMUSBATMXT640_STMUSBATMXT640.dep  STMUSBATMXT640_sct.Bak  dma.crf  dma.d  gpio.crf  gpio.d  i2c.crf  i2c.d  main.crf  main.d  mxt_bridge.crf  mxt_bridge.d  mxt_cmd.crf  mxt_cmd.d  mxt_enc.crf  mxt_enc.d  mxt_i2c.crf  mxt_i2c.d  mxt_msg.crf  mxt_msg.d  mxt_spi_stream.crf  mxt_spi_stream.d  mxt_state.crf  mxt_state.d  mxt_touch.crf  mxt_touch.d  mxt_usb_io.crf  mxt_usb_io.d  spi.crf  spi.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  (+58 more)
USB_DEVICE/: Mode3_Output_Protocol.md  String_Commands.md
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
ej/: Data.txt
ej/ENC/: .vsconfig
ej/bit/: enc.txt  spistart.txt  xcfg.txt
ej/doc/: 2026-May-26 101658.txt  40002353A-20260525140212.md  DATAD.txt  Level1_QTAN0050_DS40001898_A_Debug_Port-20260525150740.md  Mode3_Output_Protocol.md  STMUSBATMXT640_技术文档.docx  STMUSBATMXT640_技术文档.md  STMUSBATMXT640_技术文档_new.docx  STMUSBATMXT640_技术文档_v2.docx  STMUSBMXT1.7_技术文档.docx  STMUSBMXT_技术文档.md  TJ电容采集板卡进展总结.md  TJ电容采集板卡进展总结_新版.docx  Untitled-1.ini  enc_upload_analysis.md  gen_stmusbmxt_images.py  last.xcfg  md_to_docx.py  serial_app_原有逻辑与ENC新增功能.md  xcfg_upload_analysis.md
ej/linux_driver_mxt_sys/mxt-app/: BUILD_WINDOWS.md  Makefile.am  Makefile.in  aclocal.m4  build-mxt-app.sh  build-w64-mingw.sh  build-win64-msys2.bat  build-win64-msys2.sh  config.h.in  configure.ac  configure~  doc
ej/linux_driver_mxt_sys/mxt-app/src/libmaxtouch/: config.c  libmaxtouch.c  libmaxtouch.h  log.c  log.h  mxt_win_stubs.c  mxt_win_stubs.h  utilfuncs.c
ej/linux_driver_mxt_sys/mxt-app/src/libmaxtouch/hidraw/: hidraw_device.c  hidraw_device.h
ej/linux_driver_mxt_sys/mxt-app/src/libmaxtouch/i2c_dev/: i2c_dev_device.h
ej/linux_driver_mxt_sys/mxt-app/src/libmaxtouch/serial/: serial_device.c  serial_device.h
ej/linux_driver_mxt_sys/mxt-app/src/libmaxtouch/usb/: usb_device.c  usb_device.h
ej/linux_driver_mxt_sys/mxt-app/src/mxt-app/: bootloader.c  bridge.c  bridge_win.c  broken_line.c  diagnostic_data.c  freq_sweep.c  menu.c  mxt_app.c  mxt_app.h  polyfit.c  self_cap.c  self_test.c  sensor_variant.c  serial_data.c  signal.c  touch_app.c
ej/linux_driver_mxt_sys/mxt-app/src/test/: run_unit_tests.h
ej/serial-app/: .gitignore  BUILD.md  mutualcap-3d-export (5).html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.main.json  vite.config.ts  vite.main.config.js
ej/test-V1.7/: .mxproject  Data.txt  Level1_QTAN0050_DS40001898_A_Debug_Port-20260424141526.md  (+3 more)
test/: Data.txt
tools/: Groups.port
(+228 files in other folders)
